--- a/Portfolio/angular.json
+++ b/Portfolio/angular.json
@@ -27,9 +27,14 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/boostrap.min.css",
               "src/styles.scss"
             ],
-            "scripts": [],
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/jquery/dist/jquery.min.js"
+
+            ],
             "es5BrowserSupport": true
           },
           "configurations": {
