--- a/Portfolio/angular.json
+++ b/Portfolio/angular.json
@@ -27,11 +27,11 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/bootstrap/dist/css/boostrap.min.css",
+              "node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.scss"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.js",
               "node_modules/jquery/dist/jquery.min.js"
 
             ],
