--- a/angular.json
+++ b/angular.json
@@ -27,8 +27,7 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/bootstrap/dist/css/bootstrap.css",
-              "src/styles.scss"
+              "src/app.scss"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
