--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "core-js": "^2.6.11",
     "gsap": "^2.1.3",
     "jquery": "^3.4.1",
+    "ngx-bootstrap": "^5.6.1",
     "ngx-webstorage-service": "^4.1.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.11.1",
