--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": false
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
@@ -32,7 +35,7 @@
               "src/styles.scss"
             ],
             "scripts": [
-              "node_modules/gsap/src/uncompressed/TweenMax.js"
+              
             ],
             "es5BrowserSupport": true
           },
