--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@angular/animations": "^7.2.16",
     "@angular/cdk": "^7.3.7",
     "@angular/common": "^7.2.16",
-    "@angular/compiler": "^7.2.16",
     "@angular/core": "^7.2.16",
     "@angular/forms": "^7.2.16",
     "@angular/platform-browser": "^7.2.16",
@@ -32,18 +31,18 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.9",
-    "@angular/cli": "^7.3.9",
-    "@angular/compiler-cli": "^7.2.16",
+    "@angular-devkit/build-angular": "^0.1102.1",
+    "@angular/compiler": "^11.2.2",
+    "@angular/compiler-cli": "^10.2.4",
     "@angular/language-service": "^7.2.16",
     "@types/greensock": "^1.15.32",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "~8.9.4",
+    "@types/node": "^14.14.2",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.1",
+    "karma": "^6.1.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^2.0.6",
     "karma-jasmine": "~1.1.2",
