--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@angular/animations": "^7.2.16",
     "@angular/cdk": "^7.3.7",
+    "@angular/cli": "^11.2.1",
     "@angular/common": "^7.2.16",
     "@angular/core": "^7.2.16",
     "@angular/forms": "^7.2.16",
