--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.16",
-    "@angular/cdk": "^7.3.7",
+    "@angular/animations": "^12.0.0-next.1",
+    "@angular/cdk": "^11.2.1",
     "@angular/cli": "^11.2.1",
-    "@angular/common": "^7.2.16",
-    "@angular/core": "^7.2.16",
-    "@angular/forms": "^7.2.16",
-    "@angular/platform-browser": "^7.2.16",
-    "@angular/platform-browser-dynamic": "^7.2.16",
-    "@angular/router": "^7.2.16",
+    "@angular/common": "^12.0.0-next.1",
+    "@angular/core": "^12.0.0-next.1",
+    "@angular/forms": "^12.0.0-next.1",
+    "@angular/platform-browser": "^12.0.0-next.1",
+    "@angular/platform-browser-dynamic": "^12.0.0-next.1",
+    "@angular/router": "^12.0.0-next.1",
     "@types/jquery": "^3.3.33",
     "bootstrap": "^4.4.1",
     "core-js": "^2.6.11",
@@ -27,15 +27,15 @@
     "jquery": "^3.5.0",
     "ngx-bootstrap": "^5.6.1",
     "ngx-webstorage-service": "^4.1.0",
-    "rxjs": "~6.3.3",
+    "rxjs": "~6.6.3",
     "tslib": "^1.11.1",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1102.1",
-    "@angular/compiler": "^11.2.2",
-    "@angular/compiler-cli": "^10.2.4",
-    "@angular/language-service": "^7.2.16",
+    "@angular/compiler": "^12.0.0-next.1",
+    "@angular/compiler-cli": "^12.0.0-next.1",
+    "@angular/language-service": "^12.0.0-next.1",
     "@types/greensock": "^1.15.32",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "^2.0.8",
@@ -52,6 +52,6 @@
     "protractor": "^5.4.3",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
+    "typescript": "~4.1.5"
   }
 }
